--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,7 @@ repos:
     rev: v3.4.0
     hooks:
       - id: end-of-file-fixer
+        exclude: ".*.json"
       - id: check-yaml
       - id: check-added-large-files
 -   repo: https://github.com/asottile/reorder-python-imports
