--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,10 +3,11 @@ repos:
     rev: 22.12.0
     hooks:
       - id: black
--   repo: https://github.com/pycqa/flake8
-    rev: 4.0.1
+-   repo: https://github.com/PyCQA/flake8
+    rev: 5.0.4
     hooks:
-      - id: flake8
+    -   id: flake8
+        additional_dependencies: [flake8-typing-imports==1.10.0]
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.4.0
     hooks:
