--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "abcount"
-version = "0.1.0"
-description = "Cheminformatics functionality that counts the acidic and basic groups in molecules."
+version = "0.2.0"
+description = "Extended cheminformatics package to work with acidic and basic groups in molecules."
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
