--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [project]
 name = "abcount"
-version = "0.2.1"
+version = "0.2.2"
 description = "Extended cheminformatics package to work with acidic and basic groups in molecules."
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "rdkit",
+    "dataclasses_json"
 ]
 
 [tool.setuptools.package-data]
