--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,9 @@ name = "testpypi"
 url = "https://test.pypi.org/simple/"
 publish-url = "https://test.pypi.org/legacy/"
 explicit = true
+
+[dependency-groups]
+dev = [
+    "pandas>=2.3.3",
+    "pytest>=9.0.2",
+]
