smarts viewer integration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ explicit = true
 
 [dependency-groups]
 dev = [
+    "ipykernel>=7.1.0",
     "pandas>=2.3.3",
     "pytest>=9.0.2",
+    "python-dotenv>=1.2.1",
+    "requests>=2.32.5",
 ]
